cambie el copyright de vuelta

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <h6 class="text-uppercase font-roboto-bold mb-4 d-flex flex-column align-items-center">Contactos</h6>
           <ul class="menulist1-unstyled mb-0 d-flex flex-column align-items-center">
                 <li> <h6><i class="fab fa-whatsapp"></i> 1566143232</h6></li>
-                <li> <h6><i class="far fa-clock"></i> Lun a Sab 8-17hs</h6> </li> 
+                <li> <h6><i class="far fa-clock"></i> Lun a Vie 8-17hs</h6> </li> 
                 <li> <h6><i class="far fa-envelope"></i> pedidos@gmail.com</h6></li> 
                 <li> <h6><i class="fas fa-map-marker-alt"></i> Av.Cordoba 1454 - CABA</h6> </li> 
            </ul>
@@ -243,7 +243,7 @@
     <!-- Copyrights -->
     <div class="bg-light py-2">
       <div class="container text-center">
-        <p class="text-dark mb-0 py-2">©  - Almácen con Ruedas - </p>
+        <p class="text-dark mb-0 py-2">© Almácen con Ruedas</p>
       </div>
     </div>
 
