arregle malas practicas

--- a/crearcuenta.html
+++ b/crearcuenta.html
@@ -29,7 +29,7 @@
 <header>
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark  fixed-top">
           <div class="container">
-            <a href="index.html"> <img src="imagenes/Logo.png" class="rounded mx-auto d-block animate__animated animate__fadeInUp"  alt="Responsive image" width="100px" height="100px"  /></a>
+            <a href="index.html"> <img src="imagenes/logo.png" class="rounded mx-auto d-block animate__animated animate__fadeInUp"  alt="Responsive image" width="100px" height="100px"  /></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                </button>
@@ -127,7 +127,7 @@
 <footer class="footerfooter">
   <div class="container-fluid py-1 ">
     <class class="row py-1 ">
-      <div class="col-lg-4 col-md-6 mb-2 mb-lg-0 d-flex flex-column align-items-center"><img class="footerlogo "src="imagenes/Logo.png" alt="100" width="100" class="mb-2">
+      <div class="col-lg-4 col-md-6 mb-2 mb-lg-0 d-flex flex-column align-items-center"><img class="footerlogo "src="imagenes/logo.png" alt="100" width="100" class="mb-2">
         <p class="font-roboto text-light mb-4 d-flex flex-column align-items-center">Almácen con ruedas es una empresa familiar que lleva productos de campo a la puerta de tu casa. Muchas gracias por tu confianza.</p>
         <p class="seguinos font-roboto  mb-4 ">SEGUINOS</p>
         <ul class="redeslist-inline mt-4">
@@ -138,9 +138,9 @@
       <div class="col-lg-3 col-md-6 mb-4 mb-lg-0 d-flex flex-column align-items-center">
         <h6 class="text-uppercase font-roboto-bold mb-4 d-flex flex-column align-items-center">Métodos de pago</h6>
         <ul class="list-unstyled mb-0 d-flex flex-column align-items-center">
-          <li class="wow mb-2 animate__animated animate__fadeInRightBig "><img src="imagenes\link.png" alt="Link" width="60" height="60" /></li>
-          <li class="wow mb-2 animate__animated animate__fadeInLeftBig" > <img src="imagenes\visa.png" alt="Logo Visa" width="60" height="60"/></li>
-          <li class="wow mb-2 animate__animated animate__fadeInRightBig" ><img src="imagenes\mastercard.png " alt="Logo Mastercard" width="60" height="60" /></li>
+          <li class="wow mb-2 animate__animated animate__fadeInRightBig "><img src="imagenes/link.png" alt="Link" width="60" height="60" /></li>
+          <li class="wow mb-2 animate__animated animate__fadeInLeftBig" > <img src="imagenes/visa.png" alt="Logo Visa" width="60" height="60"/></li>
+          <li class="wow mb-2 animate__animated animate__fadeInRightBig" ><img src="imagenes/mastercard.png " alt="Logo Mastercard" width="60" height="60" /></li>
           <li class="wow mb-2 animate__animated animate__fadeInLeftBig"><img src="imagenes/transferencia.png" alt="Logo Transferencia" width="60" height="60" /></li>
          </ul>
       </div>
