--- a/quesosoveja.html
+++ b/quesosoveja.html
@@ -79,7 +79,7 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="imagenes/queso 1.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="imagenes/queso1.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Shanklish </a>
@@ -91,23 +91,24 @@
           </div>
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="imagenes/queso 2.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="imagenes/queso2.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Aceitunas rellenas </a>
+                  <a href="#">Halloumi </a>
                 </h4>
-                <p class="card-text">Riquísimas aceitunas verdes y negras, rellenas de: Almendras, queso provolone y morrón.</p>
+                <p class="card-text">Excelente queso de oveja.</p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="imagenes/queso 1.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="imagenes/queso1.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#">Pepinos Agridulces </a>
                 </h4>
-                <p class="card-text">Riquísimos pepinos conservados con Mostaza y laurel. </p>
+                <p class="card-text">Shanklish: Es un producto lácteo elaborado con leche de vaca. Es considerado uno de los quesos mas antiguos del mundo y es muy popular en la zona de Libano y Siria.
+                  Tiene forma de esfera y está recubierto de especias. </p>
              </div>
            </div>
          </div>
@@ -117,7 +118,7 @@
 <footer class="footerfooter">
   <div class="container-fluid py-1 ">
     <class class="row py-1 ">
-      <div class="col-lg-4 col-md-6 mb-2 mb-lg-0 d-flex flex-column align-items-center"><img class="footerlogo "src="imagenes/Logo.png" alt="100" width="100" class="mb-2">
+      <div class="col-lg-4 col-md-6 mb-2 mb-lg-0 d-flex flex-column align-items-center"><img class="footerlogo "src="imagenes/logo.png" alt="100" width="100" class="mb-2">
         <p class="font-roboto text-light mb-4 d-flex flex-column align-items-center">Almácen con ruedas es una empresa familiar que lleva productos de campo a la puerta de tu casa. Muchas gracias por tu confianza.</p>
         <p class="seguinos font-roboto  mb-4  ">SEGUINOS</p>
         <ul class="redeslist-inline mt-4">
@@ -128,9 +129,9 @@
       <div class="col-lg-3 col-md-6 mb-4 mb-lg-0 d-flex flex-column align-items-center">
         <h6 class="text-uppercase font-roboto-bold mb-4 d-flex flex-column align-items-center">Métodos de pago</h6>
         <ul class="list-unstyled mb-0 d-flex flex-column align-items-center">
-          <li class="wow mb-2 animate__animated animate__fadeInRightBig "><img src="imagenes\link.png" alt="Link" width="60" height="60" /></li>
-          <li class="wow mb-2 animate__animated animate__fadeInLeftBig" > <img src="imagenes\visa.png" alt="Logo Visa" width="60" height="60"/></li>
-          <li class="wow mb-2 animate__animated animate__fadeInRightBig" ><img src="imagenes\mastercard.png " alt="Logo Mastercard" width="60" height="60" /></li>
+          <li class="wow mb-2 animate__animated animate__fadeInRightBig "><img src="imagenes/link.png" alt="Link" width="60" height="60" /></li>
+          <li class="wow mb-2 animate__animated animate__fadeInLeftBig" > <img src="imagenes/visa.png" alt="Logo Visa" width="60" height="60"/></li>
+          <li class="wow mb-2 animate__animated animate__fadeInRightBig" ><img src="imagenes/mastercard.png " alt="Logo Mastercard" width="60" height="60" /></li>
           <li class="wow mb-2 animate__animated animate__fadeInLeftBig"><img src="imagenes/transferencia.png" alt="Logo Transferencia" width="60" height="60" /></li>
          </ul>
       </div>
