--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 <footer class="footerfooter">
     <div class="container-fluid py-1 ">
       <class class="row py-1 ">
-        <div class="col-lg-4 col-md-6 mb-2 mb-lg-0 d-flex flex-column align-items-center"><img class="footerlogo "src="imagenes/logo.png" alt="100" width="100" class="mb-2">
+        <div class="footerlogo col-lg-4 col-md-6 mb-2 mb-lg-0 d-flex flex-column align-items-center"><img src="imagenes/logo.png" alt="100" width="100" class="mb-2">
           <p class="font-roboto text-light mb-4 d-flex flex-column align-items-center">Almácen con ruedas es una empresa familiar que lleva productos de campo a la puerta de tu casa. Muchas gracias por tu confianza.</p>
           <p class="seguinos font-roboto  mb-4 ">SEGUINOS</p>
           <ul class="redeslist-inline mt-4">
