--- a/quesosoveja.html
+++ b/quesosoveja.html
@@ -28,7 +28,7 @@
   
  <nav class="navbar fixed-top navbar-expand-lg navbar-dark  fixed-top">
     <div class="container">
-      <a href="index.html"> <img src="imagenes/logo.png" class="rounded mx-auto d-block animate__animated animate__fadeInUp"  alt="Responsive image" width="100px" height="100px"  /></a>
+      <a href="index.html"> <img src="imagenes/transferencia.png" class="rounded mx-auto d-block animate__animated animate__fadeInUp"  alt="Responsive image" width="100px" height="100px"  /></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
