--- a/ejemplounproducto.html
+++ b/ejemplounproducto.html
@@ -25,7 +25,7 @@
  <header>  
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark  fixed-top">
       <div class="container">
-        <a href="index.html"> <img src="imagenes/logo.png" class="rounded mx-auto d-block animate__animated animate__fadeInUp"  alt="Responsive image" width="100px" height="100px"  /></a>
+        <a class="rounded mx-auto d-block animate__animated animate__fadeInUp" href="index.html"> <img src="imagenes/logo1.png" alt="Responsive image" width="100px" height="100px"  /></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
@@ -161,8 +161,9 @@
 <footer class="footerfooter">
   <div class="container-fluid py-1 ">
     <class class="row py-1 ">
-      <div class="footerlogo col-lg-4 col-md-6 mb-2 mb-lg-0 d-flex flex-column align-items-center"><img src="imagenes/logo.png" alt="100" width="100" class="mb-2">
-        <p class="font-roboto text-light mb-4 d-flex flex-column align-items-center">Almácen con ruedas es una empresa familiar que lleva productos de campo a la puerta de tu casa. Muchas gracias por tu confianza.</p>
+      <div class="footerlogo col-lg-4 col-md-6 mb-2 mb-lg-0 d-flex flex-column align-items-center">
+        <img src="imagenes/logo1.png" alt="100" width="100" class="mb-2">
+         <p class="font-roboto text-light mb-4 d-flex flex-column align-items-center">Almácen con ruedas es una empresa familiar que lleva productos de campo a la puerta de tu casa. Muchas gracias por tu confianza.</p>
         <p class="seguinos font-roboto  mb-4  ">SEGUINOS</p>
         <ul class="redeslist-inline mt-4">
           <li class="wow list-inline-item animate__animated animate__flipInX"><a href="https://www.facebook.com/almacenconruedas" target="_blank" title="facebook"><i class="fab fa-facebook"></i></a></li>
