foto en html un producto

--- a/ejemplounproducto.html
+++ b/ejemplounproducto.html
@@ -37,7 +37,7 @@
                 </a>
                </li>
                <li class="nav-item">
-                 <a class="nav-link" href="combos.html "><i class="fas fa-dot-circle"></i>
+                 <a class="nav-link" href="combos.html"><i class="fas fa-dot-circle"></i>
                   COMBOS
                 </a>
                </li>
@@ -81,7 +81,7 @@
           <div class="col-lg-6 mb-4">
             <div class="">
               <div class="main-product-image">
-                <img src="imagenes/informacion.png" srcset="imagenes/informacion.png 1x, imagenes/informacion.png 2x" alt="Informacion" class="img-fluid">
+                <img class="img-fluid" src="imagenes/informacion.png" srcset="imagenes/informacion.png" 1x, alt="Informacion" >
               </div>
             </div>
           </div>
