cambios en css y unproducto

--- a/ejemplounproducto.html
+++ b/ejemplounproducto.html
@@ -81,7 +81,7 @@
           <div class="col-lg-6 mb-4">
             <div class="">
               <div class="main-product-image">
-                <img class="img-fluid" src="imagenes/informacion.png" srcset="imagenes/informacion.png" 1x, alt="Informacion" >
+                <img class="img-fluid" src="imagenes/informacion.png" alt="Informacion" >
               </div>
             </div>
           </div>
