informacion1 por informacion png

--- a/ejemplounproducto.html
+++ b/ejemplounproducto.html
@@ -81,7 +81,7 @@
           <div class="col-lg-6 mb-4">
             <div class="">
               <div class="main-product-image">
-                <img class="img-fluid" src="imagenes/informacion.png" alt="Informacion" >
+                <img src="imagenes/informacion1.png" srcset="imagenes/informacion1.png 1x, imagenes/informacion1.png 2x" alt="Informacion" class="img-fluid">
               </div>
             </div>
           </div>
