--- a/combos.html
+++ b/combos.html
@@ -74,13 +74,10 @@
 </header>  
 
 <main class="mainmain1">
-
-<div class="container">
-      <!-- COMBOS SECTION -->
-      <div class="divcombos">
-        <a href="combos.html"><h2><strong>COMBOS</strong></h2></a> 
-      </div> 
-
+  <div class="container">
+    <div class="divcombos">
+        <a  href="combos.html"><h1><strong>COMBOS</strong></h1></a> 
+    </div> 
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
@@ -89,7 +86,7 @@
               <h4 class="card-title">
                 <a href="ejemplounproducto.html">Combo Clasico</a>
               </h4>
-              <p class="card-text">Llevate el combo por $1490</p>
+              <p class="card-text"> Llevate el combo por $1490.</p>
             </div>
           </div>
         </div>
@@ -100,7 +97,7 @@
               <h4 class="card-title">
                 <a href="#">Box Degustacion</a>
               </h4>
-              <p class="card-text">Proba todos los articulos en un solo combo, disfrutalo o realiza un regalo..</p>
+              <p class="card-text">Proba todos los articulos en un solo combo, disfrutalo o realiza un regalo.</p>
             </div>
           </div>
         </div>
@@ -109,16 +106,14 @@
             <a href="#"><img class="card-img-top" src="imagenes/combo3.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Bolsa Regional </a>
+                <a href="#">Bolsa Regional</a>
               </h4>
-              <p class="card-text"> Llevate una bolsa regional todo elaborado desde Tandil.</p>
+              <p class="card-text">Llevate una bolsa regional todo elaborado desde Tandil.</p>
             </div>
           </div>
         </div>
       </div>
 
-
- 
 
 </main>
 
