--- a/crearcuenta.html
+++ b/crearcuenta.html
@@ -70,11 +70,13 @@
           </div>
       </nav> 
 </header>
-
+ 
 <main class="mainmain3"> 
-  <div class="divformulario">
-    <a href="crearcuenta.html"><h2 class="crearh"><strong>CREAR CUENTA</strong></h2></a> 
-   </div> 
+  <div class="container">
+    <div class="divformulario">
+        <a  href="crearcuenta.html"><h1><strong>CREAR CUENTA</strong></h1></a> 
+    </div>
+  </div> 
  <div class="container-fluid">
     <div class="row">
         <div class="col-md-12  ">
@@ -112,7 +114,7 @@
                               </div>
                           </div>
                           <div class="form-group d-flex flex-column align-items-center">
-                              <div class="col-md-12 text-center">
+                              <div class="col-md-8 text-center">
                                   <button type="submit" class="btn btn-dark btn-lg">Enviar</button>
                               </div>
                           </div>
