--- a/ejemplounproducto.html
+++ b/ejemplounproducto.html
@@ -71,7 +71,7 @@
 <main class="mainmain6">
      <div class="container">
         <div class="row">
-          <div class="col-12">
+          <div class="col-lg-6 mb-4 d-flex flex-column align-items-center">
             <div class="divunproducto">
               <h1><strong>Inicio> Combo> Combo Clásico</strong></h1>
           </div>
@@ -79,13 +79,11 @@
       </div> 
         <div class="row">
           <div class="col-lg-6 mb-4">
-            <div class="">
               <div class="main-product-image">
                 <img src="imagenes/informacion1.png" srcset="imagenes/informacion1.png 1x, imagenes/informacion1.png 2x" alt="Informacion" class="img-fluid">
               </div>
             </div>
-          </div>
-          <div class="col-lg-6">
+           <div class="col-lg-6 mb-4">
             <form class="form-horizontal" action="/cart/add/224302" method="post" enctype="multipart/form-data" name="buy">
               <div class="form-group price_elem row">
                 <label class="col-sm-3 col-md-3 form-control-label nopaddingtop">Precio:</label>
