--- a/quesosoveja.html
+++ b/quesosoveja.html
@@ -71,48 +71,47 @@
 
 </header>
      
-<main class="mainmain5">
-  <div class="container">
-        <div class="divquesooveja">
-          <a href="quesosoveja.html"><h2><strong>Quesos Oveja</strong></h2></a> 
-        </div> 
-        <div class="row">
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="imagenes/queso1.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Shanklish </a>
-                </h4>
-                <p class="card-text">Shanklish: Es un producto lácteo elaborado con leche de vaca. Es considerado uno de los quesos mas antiguos del mundo y es muy popular en la zona de Libano y Siria.
-                  Tiene forma de esfera y está recubierto de especias. Su textura es muy sueve y se sirve con aceite de oliva. </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="imagenes/queso2.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Halloumi </a>
-                </h4>
-                <p class="card-text">Excelente queso de oveja.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="imagenes/queso1.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Pepinos Agridulces </a>
-                </h4>
-                <p class="card-text">Shanklish: Es un producto lácteo elaborado con leche de vaca. Es considerado uno de los quesos mas antiguos del mundo y es muy popular en la zona de Libano y Siria.
-                  Tiene forma de esfera y está recubierto de especias. </p>
+<main >
+  <main class="mainmain10">
+    <div class="container">
+       <div class="divquesooveja">
+           <a  href="quesosoveja.html"><h1><strong>Queso Oveja</strong></h1></a> 
+       </div> 
+         <div class="row">
+           <div class="col-lg-4 col-sm-6 portfolio-item">
+             <div class="card h-100">
+               <a href=" "><img class="card-img-top" src="imagenes/queso1.png" alt=""></a>
+               <div class="card-body">
+                 <h4 class="card-title">
+                   <a href=" ">Manchego</a>
+                 </h4>
+                 <p class="card-text">  En su interior, el queso Manchego se caracteriza por su pasta firme y compacta. En la boca, tiene un sabor ligeramente ácido, fuerte y sabroso, que se transforma en picante en las variedades de quesos muy curados. En cuanto a su textura y elasticidad, es baja, con sensación mantecosa e incluso algo harinosa, que puede llegar a ser granulosa en los quesos muy maduros.</p>
+               </div>
+             </div>
+           </div>
+           <div class="col-lg-4 col-sm-6 portfolio-item">
+             <div class="card h-100">
+               <a href="#"><img class="card-img-top" src="imagenes/queso2.png" alt=""></a>
+               <div class="card-body">
+                 <h4 class="card-title">
+                   <a href="#">Queso Halloumi</a>
+                 </h4>
+                 <p class="card-text">El queso Halloumi es una variedad blanda a semidura elaborada con leche fresca de oveja y de vaca. De textura elástica y a la vez fibrosa.</p>
+               </div>
+             </div>
+           </div>
+           <div class="col-lg-4 col-sm-6 portfolio-item">
+             <div class="card h-100">
+               <a href="#"><img class="card-img-top" src="imagenes/queso1.png" alt=""></a>
+               <div class="card-body">
+                 <h4 class="card-title">
+                   <a href="#">Manchego</a>
+                 </h4>
+                 <p class="card-text"> En su interior, el queso Manchego se caracteriza por su pasta firme y compacta. En la boca, tiene un sabor ligeramente ácido, fuerte y sabroso, que se transforma en picante en las variedades de quesos muy curados. En cuanto a su textura y elasticidad, es baja, con sensación mantecosa e incluso algo harinosa, que puede llegar a ser granulosa en los quesos muy maduros.</p>
+               </div>
              </div>
            </div>
          </div>
-   </div>
 </main>
     
 <footer class="footerfooter">
