--- a/quesosvaca.html
+++ b/quesosvaca.html
@@ -71,47 +71,47 @@
 
 </header>
      
-<main class="mainmain4">
-  <div class="container">
-        <div class="divquesovaca">
-          <a href="quesosvaca.html"><h2><strong>Quesos Vaca</strong></h2></a> 
-        </div> 
-        <div class="row">
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="imagenes/quesovaca1.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Shanklish </a>
-                </h4>
-                <p class="card-text">Shanklish: Es un producto lácteo elaborado con leche de vaca. Es considerado uno de los quesos mas antiguos del mundo y es muy popular en la zona de Libano y Siria.
-                  Tiene forma de esfera y está recubierto de especias. Su textura es muy sueve y se sirve con aceite de oliva. </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="imagenes/quesovaca2.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Aceitunas rellenas </a>
-                </h4>
-                <p class="card-text">Riquísimas aceitunas verdes y negras, rellenas de: Almendras, queso provolone y morrón.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="imagenes/quesovaca1.png" alt=""></a>
-              <div class="card-body">
-                <h4 class="card-title">
-                  <a href="#">Pepinos Agridulces </a>
-                </h4>
-                <p class="card-text">Riquísimos pepinos conservados con Mostaza y laurel. </p>
+<main >
+  <main class="mainmain9">
+    <div class="container">
+       <div class="divquesovaca">
+           <a  href="quesosvaca.html"><h1><strong>Queso Vaca</strong></h1></a> 
+       </div> 
+         <div class="row">
+           <div class="col-lg-4 col-sm-6 portfolio-item">
+             <div class="card h-100">
+               <a href=" "><img class="card-img-top" src="imagenes/quesovaca1.png" alt=""></a>
+               <div class="card-body">
+                 <h4 class="card-title">
+                   <a href=" ">Mini horma a la pimienta cerrada al vacío</a>
+                 </h4>
+                 <p class="card-text"> Basado en el tradicional Chubut, en el proceso se le incorpora pimienta en grano de la mejor.</p>
+               </div>
+             </div>
+           </div>
+           <div class="col-lg-4 col-sm-6 portfolio-item">
+             <div class="card h-100">
+               <a href="#"><img class="card-img-top" src="imagenes/quesovaca2.png" alt=""></a>
+               <div class="card-body">
+                 <h4 class="card-title">
+                   <a href="#">Queso Morbier</a>
+                 </h4>
+                 <p class="card-text">El Morbier forma parte de los quesos de pasta semi dura, prensada, de color amarillo pálido. Se realiza con leche de vaca y su característica original es que tiene una linea negra de carbón vegetal bien definida en el centro.</p>
+               </div>
+             </div>
+           </div>
+           <div class="col-lg-4 col-sm-6 portfolio-item">
+             <div class="card h-100">
+               <a href="#"><img class="card-img-top" src="imagenes/quesovaca1.png" alt=""></a>
+               <div class="card-body">
+                 <h4 class="card-title">
+                   <a href="#">Mini horma a la pimienta cerrada al vacío</a>
+                 </h4>
+                 <p class="card-text">Basado en el tradicional Chubut, en el proceso se le incorpora pimienta en grano de la mejor.</p>
+               </div>
              </div>
            </div>
          </div>
-   </div>
 </main>
     
 <footer class="footerfooter">
