--- a/carrito.html
+++ b/carrito.html
@@ -3,7 +3,7 @@
   
 <head>   
     <meta charset="UTF-8">
-    <title> Destacados</title>
+    <title> Carrito</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link href="css/modern-business.css" rel="stylesheet">
   <link rel="stylesheet" href= "css/all.css" />
-  <link rel="stylesheet" href= "css/styles.css" />
+  <link rel="stylesheet" href= "css/main.css" />
   <link rel="stylesheet" href="css/animate.min.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
@@ -68,77 +68,72 @@
 
 </header>
 
-
-<main> 
-
-<div class="container1-fluid d-flex flex-column align-items-center ">
-    <div class="row">
-      <div class="col-12 mb-4 ">
-        <h1 class="page-header">Carrito</h1>
-      </div>
+<main>
+  <div class="container">
+    <div class="divcarrito"> 
+      <a href="carrito.html"><h1><strong>CARRITO</strong></h1></a>  
     </div>
-      <div class="row">
-        <div class="col-lg-12 mb-4">
-          <form id="cart-update-form" method="post" action="/cart/update">
-            <div class="table-responsive">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>Producto</th>
-                    <th class="mob-hide"></th>
-                    <th class="mob-hide">Precio unitario</th>
-                    <th class="table-qty">Cant</th>
-                    <th>Subtotal</th>
-                    <th></th>
-                  </tr>
-                </thead>
+  </div>
+  <form id="cart-update-form" method="post" action="">
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Producto</th>
+            <th class="mob-hide"></th>
+            <th class="mob-hide">Precio x unidad</th>
+            <th class="table-qty">Cant</th>
+            <th>Subtotal</th>
+            <th></th>
+          </tr>
+        </thead>
         <tbody><tr>
-              <td>
-                <h3>Combo Clásico</h3>
-              </td>
-                <td class="text-center1 mob-hide">
-                    <a href="ejemplounproducto.html" class="trsn" title="Combo1">
-                      <img src="imagenes/combo1.png" alt="Combo" title="Combo1">
-                    </a>
-                </td>
-                <td class="mob-hide">
-                  <span class="order-product-price">$1.490.000</span>
-                </td>
-                  <td>
-                    <select class="select select-qty form-control" name="" title="Qty" onchange="">                    
-                      <option value="1"selected="selected">1</option>                      
-                      <option value="2" >2</option>                      
-                      <option value="3">3</option>                      
-                      <option value="4">4</option>                      
-                      <option value="5">5</option>                     
-                      <option value="6">6</option>                      
-                      <option value="7">7</option>                     
-                      <option value="8">8</option>                
-                      <option value="9">9</option> 
-                      <option value="10">10</option>
-                    </select>
-                  </td>
-                  <td>
-                    <span class="order-product-subtotal">$1.490.000</span>
-                  </td>
-                  <td clas="text-right"> <a href="/cart/remove_product/42943204" class="cart-product-remove" title="Remove Product"><i class="fas fa-times-circle"></i></a></td>
-                </tr> 
-        </tbody></table>
-     </div>
+          <td>
+            <h4>
+              Combo Clasico
+            </h4> 
+          </td>
+          <td class="text-center1 mob-hide">
+            <a href="combos.html" class="trsn" title="iMac Desktop Computer">
+              <img src="imagenes/informacion1.png" alt="Combo clasico" title="Combo clasico">
+            </a>
+          </td>
+          <td class="mob-hide">
+            <span class="order-product-price">$1.490.000</span>
+          </td>
+          <td>
+            <select class="select select-qty form-control" name="" title="Qty" onchange="">
+              
+              <option value="1" selected="selected">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+
+            </select>
+          </td>
+          <td>
+            <span class="order-product-subtotal">$1.490.000</span>
+          </td>
+          <td clas="text-right"> <a href="" class="cart-product-remove" title="Remover Producto"><i class="fas fa-times-circle"></i></a></td>
+        </tr>
+      </tbody></table>
+  </div>
     <div class="col-12 cart-totals">
-        <table class="table table-striped">
-            <tr class="totals key">
-              <td colspan="1" class="text-left"><strong>Total</strong></td>
-              <td colspan="1" class="text-right"><strong>1.490.000</strong></td>
-            </tr>
-        </tbody></table>
-            <div class="text-center cart-actions">
-                <a href="index.html" class="btn btn-dark btn-block" title="Proceed to Checkout">Salir</a>
-                <a href="combos.html" class="btn btn-link btn-block" title="← Continue Shopping">← Continuar Comprando</a>
-              </div>
-            </div>
-          </div>
-        </div>
+      <table class="table table-striped">
+        <tbody><tr class="totals key">
+          <td colspan="1" class="text-left"><strong>Total</strong></td>
+          <td colspan="1" class="text-right"><strong>$1.490.000</strong></td>
+        </tr>
+      </tbody></table>
+      <div class="text-center cart-actions d-flex flex-column align-items-center">
+        <a href="combos.html" class="btn btn-dark btn-block " title="Volver">Volver</a>
+        <a href="index.html" class="btn btn-dark btn-block" title="← Continuar Comprando">← Continuar Comprando</a>
       </div>
     </div>
 </main>
