cambios varios media querries

--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@
       </ol>
       <div class="carousel-inner" role="listbox">
          <div class="carousel-item active" style="background-image: url(imagenes/slide.jpg)">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption   ">
             <p><i class="fas fa-motorcycle"></i><em>Envíos a domicilio</em><br> 
               <strong>Trabajamos en toda la capital federal</strong></p>
           </div>
         </div>
          <div class="carousel-item" style="background-image: url(imagenes/slide2.jpg)">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption ">
             <p><i class="fas fa-money-bill-wave-alt"></i><em>Pagá como quieras</em><br> 
               <strong>Transferencia o tarjeta de crédito</strong></p>
           </div>
         </div>
          <div class="carousel-item" style="background-image: url(imagenes/slide3.jpg)">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption  ">
             <p><i class="fas fa-lock"></i><em>Comprá con seguridad</em><br>
               <strong>Tús datos siempre protegidos</strong></p>
           </div>
@@ -212,10 +212,10 @@
         <div class="col-lg-3 col-md-6 mb-4 mb-lg-0 d-flex flex-column align-items-center">
           <h6 class="text-uppercase font-roboto-bold mb-4 d-flex flex-column align-items-center">Métodos de pago</h6>
           <ul class="list-unstyled mb-0 d-flex flex-column align-items-center">
-            <li class="wow mb-2 animate__animated animate__fadeInRightBig "><img src="imagenes/link.png" alt="Link" width="60" height="60" /></li>
-            <li class="wow mb-2 animate__animated animate__fadeInLeftBig" > <img src="imagenes/visa.png" alt="Logo Visa" width="60" height="60"/></li>
-            <li class="wow mb-2 animate__animated animate__fadeInRightBig" ><img src="imagenes/mastercard.png " alt="Logo Mastercard" width="60" height="60" /></li>
-            <li class="wow mb-2 animate__animated animate__fadeInLeftBig"><img src="imagenes/transferencia.png" alt="Logo Transferencia" width="60" height="60" /></li>
+            <li class="wow mb-2 animate__animated animate__fadeInRight "><img src="imagenes/link.png" alt="Link" width="60" height="60" /></li>
+            <li class="wow mb-2 animate__animated animate__fadeInLeft" > <img src="imagenes/visa.png" alt="Logo Visa" width="60" height="60"/></li>
+            <li class="wow mb-2 animate__animated animate__fadeInRight" ><img src="imagenes/mastercard.png " alt="Logo Mastercard" width="60" height="60" /></li>
+            <li class="wow mb-2 animate__animated animate__fadeInLeft"><img src="imagenes/transferencia.png" alt="Logo Transferencia" width="60" height="60" /></li>
            </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 d-flex flex-column align-items-center">
