--- a/ejemplounproducto.html
+++ b/ejemplounproducto.html
@@ -171,10 +171,10 @@
       <div class="col-lg-3 col-md-6 mb-4 mb-lg-0 d-flex flex-column align-items-center">
         <h6 class="text-uppercase font-roboto-bold mb-4 d-flex flex-column align-items-center">Métodos de pago</h6>
         <ul class="list-unstyled mb-0 d-flex flex-column align-items-center">
-          <li class="wow mb-2 animate__animated animate__fadeInRightBig "><img src="imagenes/link.png" alt="Link" width="60" height="60" /></li>
-          <li class="wow mb-2 animate__animated animate__fadeInLeftBig" > <img src="imagenes/visa.png" alt="Logo Visa" width="60" height="60"/></li>
-          <li class="wow mb-2 animate__animated animate__fadeInRightBig" ><img src="imagenes/mastercard.png " alt="Logo Mastercard" width="60" height="60" /></li>
-          <li class="wow mb-2 animate__animated animate__fadeInLeftBig"><img src="imagenes/transferencia.png" alt="Logo Transferencia" width="60" height="60" /></li>
+          <li class="wow mb-2 animate__animated animate__fadeInRight "><img src="imagenes/link.png" alt="Link" width="60" height="60" /></li>
+          <li class="wow mb-2 animate__animated animate__fadeInLeft" > <img src="imagenes/visa.png" alt="Logo Visa" width="60" height="60"/></li>
+          <li class="wow mb-2 animate__animated animate__fadeInRight" ><img src="imagenes/mastercard.png " alt="Logo Mastercard" width="60" height="60" /></li>
+          <li class="wow mb-2 animate__animated animate__fadeInLeft"><img src="imagenes/transferencia.png" alt="Logo Transferencia" width="60" height="60" /></li>
          </ul>
       </div>
       <div class="col-lg-2 col-md-6 mb-4 mb-lg-0 d-flex flex-column align-items-center">
