--- a/combos.html
+++ b/combos.html
@@ -76,7 +76,7 @@
 <main class="mainmain1">
   <div class="container">
     <div class="divcombos">
-        <a  href="combos.html"><h1><strong>COMBOS</strong></h1></a> 
+        <a class="wow animate__animated  animate__lightSpeedInLeft" href="combos.html"><h1><strong>COMBOS</strong></h1></a> 
     </div> 
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
