--- a/crearcuenta.html
+++ b/crearcuenta.html
@@ -74,7 +74,7 @@
 <main class="mainmain3"> 
   <div class="container">
     <div class="divformulario">
-        <a  href="crearcuenta.html"><h1><strong>CREAR CUENTA</strong></h1></a> 
+        <a  class="wow animate__animated  animate__lightSpeedInLeft" href="crearcuenta.html"><h1><strong>CREAR CUENTA</strong></h1></a> 
     </div>
   </div> 
  <div class="container-fluid">
