--- a/destacados.html
+++ b/destacados.html
@@ -76,7 +76,7 @@
   <main class="mainmain2">
     <div class="container">
       <div class="divdestacados"> 
-        <a href="destacados.html"><h1><strong>DESTACADOS</strong></h1></a>  
+        <a class="wow animate__animated  animate__lightSpeedInLeft" href="destacados.html"><h1><strong>DESTACADOS</strong></h1></a>  
       </div> 
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
