--- a/quesosvaca.html
+++ b/quesosvaca.html
@@ -75,7 +75,7 @@
   <main class="mainmain9">
     <div class="container">
        <div class="divquesovaca">
-           <a  href="quesosvaca.html"><h1><strong>Queso Vaca</strong></h1></a> 
+           <a class="wow animate__animated  animate__lightSpeedInLeft" href="quesosvaca.html"><h1><strong>Queso Vaca</strong></h1></a> 
        </div> 
          <div class="row">
            <div class="col-lg-4 col-sm-6 portfolio-item">
