--- a/carrito.html
+++ b/carrito.html
@@ -71,7 +71,7 @@
 <main>
   <div class="container">
     <div class="divcarrito"> 
-      <a href="carrito.html"><h1><strong>CARRITO</strong></h1></a>  
+      <a class="wow animate__animated  animate__lightSpeedInLeft" href="carrito.html"><h1><strong>CARRITO</strong></h1></a>  
     </div>
   </div>
   <form id="cart-update-form" method="post" action="">
