--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <main class="mainmain">
  <div class="container">
     <div class="divcombos">
-        <a  href="combos.html"><h1><strong>COMBOS</strong></h1></a> 
+        <a class="wow animate__animated  animate__lightSpeedInLeft" href="combos.html"><h1><strong>COMBOS</strong></h1></a> 
     </div> 
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
@@ -123,7 +123,7 @@
             <a href="ejemplounproducto.html"><img class="card-img-top" src="imagenes/combo1.png" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="ejemplounproducto.html">Combo Clasico</a>
+                <a  href="ejemplounproducto.html">Combo Clasico</a>
               </h4>
               <p class="card-text"> Llevate el combo por $1490.</p>
             </div>
@@ -155,7 +155,7 @@
 
 <div class="container">
     <div class="divdestacados"> 
-      <a href="destacados.html"><h1><strong>DESTACADOS</strong></h1></a>  
+      <a class="wow animate__animated  animate__lightSpeedInLeft" href="destacados.html"><h1><strong>DESTACADOS</strong></h1></a>  
     </div> 
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
