--- a/quesosoveja.html
+++ b/quesosoveja.html
@@ -75,7 +75,7 @@
   <main class="mainmain10">
     <div class="container">
        <div class="divquesooveja">
-           <a  href="quesosoveja.html"><h1><strong>Queso Oveja</strong></h1></a> 
+           <a  class="wow animate__animated  animate__lightSpeedInLeft" href="quesosoveja.html"><h1><strong>Queso Oveja</strong></h1></a> 
        </div> 
          <div class="row">
            <div class="col-lg-4 col-sm-6 portfolio-item">
