--- a/quesosoveja.html
+++ b/quesosoveja.html
@@ -26,13 +26,13 @@
 </div>
 <header>
   
- <nav class="navbar fixed-top navbar-expand-lg navbar-dark  fixed-top">
+ <nav class=" navbar fixed-top navbar-expand-lg navbar-dark  fixed-top">
     <div class="container">
       <a class="rounded d-block animate__animated animate__fadeInUp" href="index.html"> <img src="imagenes/logo1.png" alt="Responsive image" width="100px" height="100px"  /></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive"> 
+          <div class=" wow animate__animated animate__bounce collapse navbar-collapse" id="navbarResponsive"> 
             <ul class="navbar-nav ml-auto">
                <li class="nav-item">
                 <a class="nav-link" href="index.html"><i class="fas fa-dot-circle"></i>
