--- a/ejemplounproducto.html
+++ b/ejemplounproducto.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-lg-6 mb-4 d-flex flex-column align-items-center">
             <div class="divunproducto">
-              <h1><strong>Inicio> Combo> Combo Clásico</strong></h1>
+              <h1><strong>Inicio> Combo> Clásico</strong></h1>
           </div>
         </div>
       </div> 
