--- a/crearcuenta.html
+++ b/crearcuenta.html
@@ -86,31 +86,31 @@
                           <div class="form-group d-flex flex-column align-items-center">
                               <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                               <div class="col-md-8">
-                                  <input id="fname" name="name" type="text" placeholder="Primer nombre" class="form-control">
+                                  <input id="fname" name="name" required type="text" placeholder="Primer nombre" class="form-control ">
                               </div>
                           </div>
                           <div class="form-group d-flex flex-column align-items-center">
                               <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
                               <div class="col-md-8">
-                                  <input id="lname" name="name" type="text" placeholder="Apellido" class="form-control">
+                                  <input id="lname" name="name" required type="text" placeholder="Apellido" class="form-control">
                               </div>
                           </div>
                           <div class="form-group d-flex flex-column align-items-center">
                               <span class="col-md-1 col-md-offset-2 text-center"><i class="fas fa-envelope-square"></i></span>
                               <div class="col-md-8">
-                                  <input id="email" name="email" type="text" placeholder="Direccion de mail" class="form-control">
+                                  <input id="email" name="email" required type="text" placeholder="Direccion de mail" class="form-control">
                               </div>
                           </div>
                           <div class="form-group d-flex flex-column align-items-center">
                               <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square bigicon"></i></span>
                               <div class="col-md-8 ">
-                                  <input id="phone" name="phone" type="text" placeholder="Telefono" class="form-control">
+                                  <input id="phone" name="phone" required type="text" placeholder="Telefono" class="form-control">
                               </div>
                           </div>
                           <div class="form-group d-flex flex-column align-items-center">
                               <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
                               <div class="col-md-8">
-                                  <textarea class="form-control" id="message" name="Mensaje" placeholder="Envianos tu mensaje te estaremos respondiendo a la brevedad" rows="7"></textarea>
+                                  <textarea class="form-control" id="message" name="Mensaje" required placeholder="Envianos tu mensaje te estaremos respondiendo a la brevedad" rows="7"></textarea>
                               </div>
                           </div>
                           <div class="form-group d-flex flex-column align-items-center">
